--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/images/Japan_hokkaido.svg
     - assets/images/Japan.svg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
